@@ -11,6 +11,7 @@
         <module>AmazonQ</module>
         <module>ChatGPT4Legacy</module>
         <module>ChatGPT4oMini</module>
+        <module>ChatGPT4o</module>
         <module>ChatGPTo1</module>
         <module>ChatGPToMini</module>
         <module>Claude</module>
@@ -31,6 +32,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.release>23</maven.compiler.release>
     </properties>
 
     <build>
@@ -49,7 +51,7 @@
                 <configuration>
                     <toolchains>
                         <jdk>
-                            <version>24</version>
+                            <version>23</version>
                         </jdk>
                     </toolchains>
                 </configuration>
@@ -58,6 +60,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
+                <configuration>
+                    <release>23</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
